<resources>
    <string name="app_name">KEvolutionF</string>
    <string name="title_activity_telefono">TelefonoActivity</string>
    <string name="welcome">"Welcome !"</string>
    <string name="cabeceratelefono"> Seleccione un número de telefono para verificar su identidad:</string>
    <string name="selBoton"> Seleccionar </string>
    <string name="ntelefonoes"> El  número de telefono seleccionado es:</string>
    <string name="continuar">Continuar</string>
    <string name="foto_app">Foto APP</string>
    <string name="nBD">Nueva BD</string>
    <string name="texto_OTP">Introduce la Clave OTP :</string>
    <string name="clave_OTP">Clave OTP </string>
    <string name="tel_fono_seleccionado">Teléfono seleccionado</string>
</resources>