<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telefonoActivity"
    android:background="@drawable/b1">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="196dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="583dp"
        android:contentDescription="@string/foto_app"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/logoconfondoapp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:layout_marginStart="92dp"
        android:textSize="6.7pt"
        android:layout_marginTop="240dp"
        android:textColor="@color/black"
        android:text="@string/cabeceratelefono"
        android:fontFamily="@font/roboto_slab"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/botonSelTel"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:fontFamily="@font/sigmar_one"
        android:text="@string/selBoton"
        android:layout_marginStart="106dp"
        android:layout_marginTop="320dp"
        android:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="420dp"
        android:textSize="6.7pt"
        android:textColor="@color/black"
        android:text="@string/ntelefonoes"
        android:fontFamily="@font/roboto_slab"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
/>
     <!--android:focusable="false"-->

    <EditText
        android:autofillHints="phone"
        android:id="@+id/NumTel"
        android:inputType="phone"
        android:focusable="false"
        android:hint="@string/tel_fono_seleccionado"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto_slab"
        android:textColor="@color/black"
        android:layout_marginStart="92dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/buttonContinuar"
        android:onClick="onContinuar"
        android:layout_width="220dp"
        android:layout_height="90dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:text="@string/continuar"
        android:fontFamily="@font/sigmar_one"
        android:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="700dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>